# cmake-example

./: CMakeLists.txt  ExampleConfig.h.in  install.bash  readme.md
app/: CMakeLists.txt  main.cpp
cmake/: MyLibConfig.cmake.in
include/mylib/: mylib.h
mylib/: CMakeLists.txt  ExampleConfig.hpp.in
mylib/cmake/: CMakeExampleLibraryConfig.cmake.in
mylib/include/mylib/: mylib.hpp
mylib/src/: mylib-impl.hpp  mylib.cpp
src/: main.cpp  mylib.cpp
